--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   rflutter_alert: ^1.0.3
+  confetti: ^0.4.0
 
 dev_dependencies:
   flutter_test:
